@startuml

entity "Recette" {
  + id: int <<PK>>
  + titre: string
  + preparation: string
}

entity "Recette_Ingrédient" {
  + recette_id: int <<PK>> <<FK>>
  + ingredient_id: int <<PK>> <<FK>>
  + quantite: string
  + unite: string
}

entity "Ingrédient" {
  + id: int <<PK>>
  + nom: string
}

entity "Relation_Ingredient_Categorie" {
  + id: int <<PK>>
  + ingredient_id: int <<FK>>
  + type_relation: string <<ENUM>>  // 'super' ou 'sous'
}

entity "Personne" {
  + id: int <<PK>>
  + nom: string
  + prenom: string
  + email: string
  + mdp: string
}
 
entity "Favoris" {
  + id: int <<PK>>
  + recette_id: int <<FK>>
  + personne_id: int <<FK>>
}

entity "Panier" {
  + id: int <<PK>>
  + recette_id: int <<FK>>
  + personne_id: int <<FK>>
  + quantite: string
}

Personne "0,n" -up- "0,n" Favoris
Personne "0,n" -up- "0,n" Panier

Favoris "1,1" -left- "1,1" Recette : Recette
Panier "1,1" -left- "1,1" Recette : Recette

Recette "1,1" -- "0,n" Recette_Ingrédient : contient
Recette_Ingrédient "1,1" -- "1,1" Ingrédient : référence
Ingrédient "0,n" -- "0,n" Relation_Ingredient_Categorie : a une relation avec
Ingrédient "0,n" -- "0,n" Relation_Ingredient_Categorie : est liée à

@enduml
